# liblicense-kde

./: AUTHORS  CMakeLists.txt  Messages.sh  README
license-kcm/: CMakeLists.txt  kcm_liblicense.cpp  kcm_liblicense.h  liblicense.desktop
license-properties-plugin/: CMakeLists.txt  licenseprops.cpp  licenseprops.desktop  licenseprops.h
license-widget/: license_chooser.ui  licensechooser.cpp  licensechooser.h
