FIND_PACKAGE(KDE4 REQUIRED)
FIND_PACKAGE(PkgConfig REQUIRED)
INCLUDE_DIRECTORIES( ${KDE4_INCLUDES} ${CMAKE_SOURCE_DIR} ${CMAKE_BINARY_DIR} )

INCLUDE(KDE4Defaults)
INCLUDE(UsePkgConfig)

PKGCONFIG(liblicense LIBLICENSE_INCLUDE_DIR LIBLICENSE_LINK_DIR LIBLICENSE_LDFLAGS LIBLICENSE_CFLAGS)
IF (NOT LIBLICENSE_INCLUDE_DIR)
MESSAGE(FATAL_ERROR "Could not find Liblicense")
ENDIF (NOT LIBLICENSE_INCLUDE_DIR)

EXEC_PROGRAM(${PKGCONFIG_EXECUTABLE} ARGS liblicense --variable=icondir RETURN_VALUE _return_VALUE OUTPUT_VARIABLE LICENSE_ICON_DIR )

ADD_DEFINITIONS(${QT_DEFINITIONS} ${KDE4_DEFINITIONS})

ADD_DEFINITIONS(-D'LICENSE_ICON_DIR="${LICENSE_ICON_DIR}"')

ADD_SUBDIRECTORY(license-properties-plugin)
ADD_SUBDIRECTORY(license-kcm)
